fixing a search form wrapping bug in Safari

--- a/sites/all/themes/civiccommons/css/acochran-global.css
+++ b/sites/all/themes/civiccommons/css/acochran-global.css
@@ -335,6 +335,7 @@ input#edit-go {
   position: absolute;
   top: 12px;
   right: 12px;
+  width: 370px;
 }
 #region-search-bar input {
   margin: 0;
